# matchmaker

./: .gitignore  README.md  pyproject.toml
examples/: expanded_pubmed_test.py  full_backend_match_test.py  full_backend_test.py  matching_engine_test.py  matchmaker_test.py  optimised_scopus.py  pubmed_author_test.py  pubmed_backend_test.py  pubmed_low_test.py  pubmed_test.py  query_test.py  rate_limit_test.py  scopus_affil_query_test.py  scopus_auth_full_test.py  scopus_auth_query_test.py  scopus_backend_test.py  scopus_full_test.py  scopus_inst_full_test.py  scopus_keyword_author_search.py  scopus_pyb_test.py  scopus_query_test.py  scopus_test.py  selector_trial.py
matchmaker/matching_engine/: __init__.py  abstract_to_abstract.py
matchmaker/query_engine/: __init__.py  abstract.py  abstract_data_types.py  abstract_selector_types.py  backend.py  data_types.py  id_types.py  query_types.py  selector_types.py  slightly_less_abstract.py
matchmaker/query_engine/backends/: __init__.py  exceptions.py  metas.py  pubmed.py  pubmed_api.py  pubmed_processsors.py  scopus.py  scopus_api.py  scopus_api_new.py  scopus_constants.py  scopus_quota_cache.py  scopus_utils.py  tools.py  web.py
matchmaker/query_engine/backends/expanded_pubmed_meta/: __init__.py
matchmaker/query_engine/backends/optimised_scopus_meta/: __init__.py
matchmaker/query_engine/backends/pubmed/: __init__.py  api.py  processors.py
matchmaker/query_engine/types/: data.py  query.py  selector.py
tests/: conftest.py  test_matchmaker.py  test_pubmed_query_engine.py  test_scopus_query_engine.py
(+6 files in other folders)
