[tool.poetry]
name = "matchmaker"
version = "0.1.0"
description = ""
authors = ["Edd Salkield <edd@salkield.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = {git = "https://github.com/PrettyWood/pydantic.git", rev = "f/discriminated-union"}
typer = "^0.4.0"
mutate-function = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
matchmaker-cli = 'matchmaker.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
